[gd_scene load_steps=9 format=3 uid="uid://r54xaeohdm7q"]

[ext_resource type="Script" path="res://user_typer.gd" id="1_cg2at"]
[ext_resource type="PackedScene" uid="uid://03ubh882kkbh" path="res://classes/Player/farmer.tscn" id="2_i4dl7"]
[ext_resource type="AudioStream" uid="uid://dbr8t3yatiw7n" path="res://assets/audio/type_chit.ogg" id="3_7li61"]
[ext_resource type="AudioStream" uid="uid://dvl23e74eat5j" path="res://assets/audio/pluck_up.ogg" id="4_jwmvx"]
[ext_resource type="AudioStream" uid="uid://dt7mncg1kctip" path="res://assets/audio/pluck_down.ogg" id="5_pc01d"]

[sub_resource type="Animation" id="Animation_sbvuv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExhaustProgressBar:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1e-05),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ExhaustProgressBar:value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1e-05),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WordContainer/CurrentWord:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ks2dh"]
resource_name = "shake_word"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExhaustProgressBar:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.00048437),
"transitions": PackedFloat32Array(1e-05),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ExhaustProgressBar:value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.402511),
"transitions": PackedFloat32Array(1, 1),
"update": 2,
"values": [0.0, 100.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WordContainer/CurrentWord:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j3lxh"]
_data = {
"RESET": SubResource("Animation_sbvuv"),
"shake_word": SubResource("Animation_ks2dh")
}

[node name="Control" type="Camera2D"]
script = ExtResource("1_cg2at")

[node name="Farmer" parent="." instance=ExtResource("2_i4dl7")]

[node name="TypeChitSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_7li61")

[node name="PluckUpSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_jwmvx")

[node name="PluckDownSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_pc01d")
pitch_scale = 0.6

[node name="ExhaustProgressBar" type="ProgressBar" parent="."]
visible = false
offset_left = -39.0
offset_top = -27.0
offset_right = 40.0
offset_bottom = -15.0
show_percentage = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
speed_scale = 0.75
libraries = {
"": SubResource("AnimationLibrary_j3lxh")
}

[node name="WordContainer" type="VBoxContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = 11.0
offset_right = 137.0
offset_bottom = 131.0
grow_vertical = 2
metadata/_edit_group_ = true

[node name="CurrentWord" type="RichTextLabel" parent="WordContainer"]
clip_contents = false
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/default_color = Color(0.47451, 0.47451, 0.47451, 0.603922)
theme_override_colors/font_outline_color = Color(1, 1, 1, 0.552941)
theme_override_constants/outline_size = 2
bbcode_enabled = true
text = "Test text"
autowrap_mode = 0

[node name="NextWord1" type="Label" parent="WordContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Next_word_1"

[node name="NextWord2" type="Label" parent="WordContainer"]
layout_mode = 2
text = "Next_word_2"

[node name="NextWord3" type="Label" parent="WordContainer"]
layout_mode = 2
text = "Next_word_3"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
